# searchcode-cli

./: Dockerfile  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: codeql.yml
searchcode/: __init__.py  banner.py  connection.py  coreutils.py  miscellaneous.py  searchcode.py
