[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "searchcode-cli"
version = "2.2.0"
description = "A Python wrapper around the searchcode API"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["searchcode", "search-engine", "codesearch", "api-wrapper"]
authors = [{ name = "Richard Mwewa", email = "rly0nheart@duck.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    ""
]

[tool.setuptools]
packages = ["searchcode"]

[project.urls]
homepage = "https://searchcode.com"
documentation = "https://github.com/rly0nheart/searchcode-cli/wiki"
repository = "https://github.com/rly0nheart/searchcode-cli.git"

